<resources>
    <string name="app_name">Security</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="action_settings">settings</string>
    <string name="result">result</string>
    <string name="com_test">com.test</string>
    <string name="test">Test</string>
    <string name="result_icon">result_icon</string>
    <string name="app_icon">app_icon</string>
    <string name="search">search</string>
    <string name="installed_apps">Installed apps</string>
    <string name="results">Results</string>
    <string name="scan_url">Scan URL</string>
    <string name="security_application">Security application</string>
    <string name="developer_cherchesov_azamat">developer - Cherchesov Azamat</string>
    <string name="total">Total:</string>
    <string name="detected">Detected:</string>
    <string name="verbose_message">Verbose message:</string>
    <string name="last_scanned_at">Last scanned at:</string>
    <string name="scanned_url">Scanned URL:</string>
</resources>
