<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/app_list"
            android:title="@string/installed_apps"
            android:icon="@drawable/ic_apps_for_scan"
            />
        <item
            android:id="@+id/scan_results"
            android:icon="@drawable/ic_scan_results"
            android:title="@string/results" />
        <item
            android:id="@+id/scan_url"
            android:icon="@drawable/ic_scan_url"
            android:title="@string/scan_url" />

    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
