<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/analysedAppIcon"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="2dp"
        android:scaleType="fitXY"
        app:layout_constraintCircleRadius="6dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/analysedAppName"
        android:maxWidth="200dp"
        android:layout_marginStart="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test"
        android:textSize="15sp"
        android:singleLine="false"
        app:layout_constraintLeft_toRightOf="@+id/analysedAppIcon"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:layout_marginStart="5dp"
        android:id="@+id/analysedPackageName"
        android:maxWidth="200dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/com_test"
        android:textSize="15sp"
        android:singleLine="false"
        app:layout_constraintLeft_toRightOf="@+id/analysedAppIcon"
        app:layout_constraintTop_toBottomOf="@+id/analysedAppName"/>

    <TextView
        android:layout_marginStart="5dp"
        android:id="@+id/analysedTime"
        android:maxWidth="200dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:textSize="15sp"
        app:layout_constraintLeft_toRightOf="@+id/analysedAppIcon"
        app:layout_constraintTop_toBottomOf="@+id/analysedPackageName" />
</android.support.constraint.ConstraintLayout>