<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">

        <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/service_name"
                style="@style/Base.TextAppearance.AppCompat"
                android:maxWidth="200dp"
                android:layout_marginStart="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test"
                android:textSize="15sp"
                android:singleLine="false"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/service_detected"
                android:maxWidth="200dp"
                android:layout_marginStart="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test"
                android:textSize="15sp"
                android:singleLine="false"
                app:layout_constraintTop_toBottomOf="@+id/service_name"/>

            <TextView
                android:layout_marginStart="5dp"
                android:id="@+id/service_result"
                android:maxWidth="200dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/com_test"
                android:textSize="15sp"
                android:singleLine="false"
                app:layout_constraintTop_toBottomOf="@+id/service_detected"/>

            <TextView
                android:layout_marginStart="5dp"
                android:id="@+id/service_detail"
                android:maxWidth="200dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/result"
                android:textSize="15sp"
                app:layout_constraintTop_toBottomOf="@+id/service_result" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>