<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">

        <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="2dp"
                android:scaleType="fitXY"
                app:layout_constraintCircleRadius="6dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/view"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_app_unchecked"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/AppName"
                android:maxWidth="200dp"
                android:layout_marginStart="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test"
                android:textSize="15sp"
                android:singleLine="false"
                app:layout_constraintLeft_toRightOf="@+id/imageView2"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:layout_marginStart="5dp"
                android:id="@+id/PackageName"
                android:maxWidth="200dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/com_test"
                android:textSize="15sp"
                android:singleLine="false"
                app:layout_constraintLeft_toRightOf="@+id/imageView2"
                app:layout_constraintTop_toBottomOf="@+id/AppName"/>

            <TextView
                android:layout_marginStart="5dp"
                android:id="@+id/ResultInfo"
                android:maxWidth="200dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/result"
                android:textSize="15sp"
                app:layout_constraintLeft_toRightOf="@+id/imageView2"
                app:layout_constraintTop_toBottomOf="@+id/PackageName" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>